finish system model

--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/background.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/background.tex
@@ -32,8 +32,8 @@
 % \begin{frame}{}
 %     \begin{itemize}
 %         \item 論理的な観点から言えば, ROS アプリケーションは, 自己完結型の動作の最小単位であるノードで構成されている
-%         \item これらのノードは, パブリッシュ/subscribe パラダイムを使用して通信する
-%         \item ノードは, トピックにsubscribeしている全てのノードにメッセージをブロードキャストするトピックでメッセージをパブリッシュする
+%         \item これらのノードは, publish/subscribe パラダイムを使用して通信する
+%         \item ノードは, トピックにsubscribeしている全てのノードにメッセージをブロードキャストするトピックでメッセージをpublishする
 %         \item ノードは, コールバックをアクティブにして各メッセージを処理することにより, publish メッセージに反応する
 %         \item これらのコールバックはメッセージ自体をpublishする可能性があるため, 複雑な動作をトピックとコールバックのネットワークとして実装できる
 %     \end{itemize}
@@ -70,7 +70,7 @@
 % \begin{frame}{}
 %     \begin{itemize}
 %         \item ノード間通信の場合, ROS は, リアルタイムシステムでのデータ配信の業界標準である Data Distribution Service [39] (DDS) を使用する
-%         \item DDS は, サービス品質 (QoS) ポリシーの豊富なセットを使用して, 目の前のニーズに適応できるネットワーク透過的なパブリッシュ/subscribe メカニズムを指定する
+%         \item DDS は, サービス品質 (QoS) ポリシーの豊富なセットを使用して, 目の前のニーズに適応できるネットワーク透過的なpublish/subscribe メカニズムを指定する
 %     \end{itemize}
 % \end{frame}
 
