--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/response_time_analysis_for_processing_chains.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/response_time_analysis_for_processing_chains.tex
@@ -96,7 +96,7 @@
         \item スケジューリングの観点から, コールバックは, イベントソース, タイマ, およびポーリングポイントベース (pp ベース) のコールバックの 3 つのカテゴリに分けることができる
 \item 便宜上, $r_{k}$ に割り当てられたイベントソースとタイマをそれぞれ含むセット $\mathcal{C}_{k}^{\text {evt }}$ と $\mathcal{C}_{k}^{\mathrm{tmr}}$ に加えて, $r_{k}$ に割り当てられた pp ベースのコールバックのセット $\mathcal{C}_{k}^{\mathrm{pp}}=\mathcal{C}_{k} \backslash\left(\mathcal{C}_{k}^{\text {evt }} \cup \mathcal{C}_{k}^{\mathrm{tmr}}\right)$ も定義する
 \item セクション 4 で説明したように, 各イベントソースは専用の予約に排他的に割り当てられるため, イベントソースは分析が最も簡単である
-\item 供給限界関数 $s b f_{k}(\Delta)$, すなわち, 長さ $\Delta$ の間隔で予約 $r_{k}$ によって提供されるサービスの最小量の概念に基づいて, Lemma 1 はイベントソースの応答時間限界を提供する
+\item 供給境界関数 $s b f_{k}(\Delta)$, すなわち, 長さ $\Delta$ の間隔で予約 $r_{k}$ によって提供されるサービスの最小量の概念に基づいて, Lemma 1 はイベントソースの応答時間限界を提供する
     \end{itemize}
 \end{frame}
 
