--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/system_model.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/system_model.tex
@@ -19,106 +19,94 @@
 
 \input{symbols_terms.tex}
 
-\begin{frame}{}
+\begin{frame}{DAGへのモデル化}
     \begin{itemize}
         \item ROS システムを, 一連のコールバック $\mathcal{C}=\left\{c_{1}, \ldots, c_{n}\right\}$ と一連の有向辺 $\mathcal{E} \subseteq \mathcal{C} \times \mathcal{C}$ で構成される直接非巡回グラフ (DAG) $\mathcal{D}=\{\mathcal{C}, \mathcal{E}\}$ としてモデル化する
-\item グラフ $\mathcal{D}$ は固定されていると仮定する
-\item すなわち, コールバックは実行時にシステムに参加したりシステムから離れたりすることはできない
+        \item 各コールバック $c_{i} \in \mathcal{C}$ には, 最悪実行時間 $e_{i}$, 一意の優先度 $\pi_{i}$ があり, 無限のインスタンスシーケンスをリリースする
     \end{itemize}
+    \assume{$\mathcal{D}$ は固定されている, すなわち, コールバックは実行時にシステムに参加したりシステムから離れたりしない}
 \end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item 各コールバック $c_{i} \in \mathcal{C}$ には, 最悪実行時間 $e_{i}$, 一意の優先度 $\pi_{i}$ があり, 潜在的に無限のインスタンスシーケンスをリリースする
-\item 離散時間モデルを想定しているすなわち, 全ての時間パラメーターは, 基本的な時間単位 (プロセッササイクルなど) の整数倍である
-    \end{itemize}
+\begin{frame}{離散時間モデル}
+    本論文では離散時間モデルを想定する
+    \begin{block}{離散時間モデル}
+        全ての時間パラメーターが基本時間単位 (プロセッササイクルなど) の整数倍
+    \end{block}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{pending, ready}
+    コールバックはDDS レイヤがメッセージを受信したとき, またはタイマ周期でアクティベーションされる
+    \begin{definition}[pending]
+        コールバックのインスタンスがアクティベーションされてから完了するまでの間, そのインスタンスは pending である
+    \end{definition}
+    \begin{definition}[ready]
+        コールバックインスタンスが pending だが実行されていない場合, そのインスタンスは ready である
+    \end{definition}
+\end{frame}
+
+\begin{frame}{エッジ}
     \begin{itemize}
-        \item そのタイプに応じて, DDS レイヤがメッセージを受信したとき, またはタイマがデッドライン切れになったときに, コールバックインスタンスがアクティベーションされる
-\item コールバックのインスタンスがアクティベーションされると, それは保留中であると言われ, 完了するまで保留されたままになる
-\item コールバックインスタンスは, 保留中であるが実行されていない場合, 準備ができていると言われる
-\item 各エッジ $\left(c_{i}, c_{j}\right) \in \mathcal{E}$ は, コールバック $c_{i}$ からコールバック $c_{j}$ へのアクティベーション関係をエンコードする
-\item すなわち, $c_{i}$ のインスタンスの実行中に, $c_{j}$ のインスタンスを 1 つまでアクティベーションする (例えば, $c_{j}$ がsubscribeしているトピックにメッセージをpublishすることによって)
+        \item 各エッジ $\left(c_{i}, c_{j}\right) \in \mathcal{E}$ は, コールバック $c_{i}$ からコールバック $c_{j}$ へのアクティベーション関係を示す
+        \item すなわち, $c_{i}$ のインスタンスの実行中に, $c_{j}$ のインスタンスを 1 つまでアクティベーションする
     \end{itemize}
 \end{frame}
 
 \begin{frame}{処理チェーン}
-    \begin{itemize}
-        \item ROS グラフ $\mathcal{D}$ は, 複数のソースコールバックとシンクコールバックを持つことができる
-\item 各ソースは, 1 つまたは複数のコールバックチェーン $\gamma^{x}=\left(c_{s}, \ldots, c_{e}\right)$, すなわちグラフ内の有向パスを生成する
-\item ソースコールバックから他のコールバックへのグラフの全てのチェーンのセットは, $\operatorname{chains}(\mathcal{D})=\left\{\gamma^{1}, \ldots, \gamma^{s}\right\}$ で示される
-\item コールバックは複数のチェーンで共有できる複数のチェーンを持つ ROS グラフの例を図 4 に示す
-    \end{itemize}
+    \fitimage{
+        \begin{itemize}
+            \item ROS グラフ $\mathcal{D}$ は, 複数のソースコールバックとシンクコールバックを持つことができる
+            \item 各ソースは, 1 つまたは複数のコールバックチェーン $\gamma^{x}=\left(c_{s}, \ldots, c_{e}\right)$, すなわちグラフ内のパスを生成する
+            \item コールバックは複数のチェーンで共有される可能性がある
+            \item 複数のチェーンを持つ ROS グラフの例を図に示す
+        \end{itemize}
+    }{chain_example}
 \end{frame}
 
 \begin{frame}{アクティベーションモデル}
     \begin{itemize}
-        \item CPA と同様に, 各ソースコールバック $c_{s}$ は, 特定の外部イベント到着曲線 $\eta_{s}^{e}(\Delta)$ に関連付けられている
-\item これは, 長さ $\Delta$ の任意の間隔でリリースできる $c_{s}$ のインスタンスの最大数を示す
-\item アクティベーション曲線
-\item w.l.o.gを想定している $\Delta>0$ の $\eta_{s}^{e}(\Delta)>0$
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{}
-    \begin{itemize}
-        \item セクション 2.1 で説明したように, 非タイマコールバックはデータ駆動型の方法でアクティベーションされる
-\item このモデルでは, コールバックが単一のタイマ, トピック, またはサービスに属していると想定している
-\item (2 つのコールバックが同じコードを実行する可能性があるため, これは制限ではない
-\item ) したがって, コールバックは, 複数のpublisherを持つトピックにsubscribeする場合にのみ, 複数の着信エッジを持つことができる 他のジョブ[27]）
-\item この場合, 全てのsubscriberは, トピックにpublishされたメッセージごとに 1 回トリガされる
-\item 複数の着信エッジを持つコールバックのアクティベーションカーブの導出については, セクション 5.1 で説明する
+        \item 各ソースコールバック $c_{s}$ は, 特定の外部イベント到着曲線 $\eta_{s}^{e}(\Delta)$ に関連付けられている
+        \item 一般性を失わず, $\Delta>0$ かつ $\eta_{s}^{e}(\Delta)>0$ を想定している
+        \item コールバックは, 複数のpublisherを持つトピックにsubscribeする場合にのみ, 複数の着信エッジを持つことができる
+        \item この場合, 全てのsubscriberは, トピックにpublishされたメッセージごとに 1 回トリガされる
     \end{itemize}
 \end{frame}
 
 \begin{frame}{エグゼキュータのスケジューリング}
     \begin{itemize}
-        \item セクション 3 で説明したように, 本論文では組み込みのシングルスレッドエグゼキュータを採用している
-\item OS に ROS エグゼキュータへの予測可能なサービスを保証させるために, 各エグゼキュータ (すなわち, 各スレッド) が単一の予約サーバに割り当てられ, 各予約サーバが単一のエグゼキュータを処理すると仮定する
-\item したがって, エグゼキュータに割り当てられたコールバックは, 対応する予約サーバに割り当てられたものと同等に見なすことができる
+        \item 本論文では, 組み込みのシングルスレッドエグゼキュータを採用する
+        \item OS に ROS エグゼキュータへの予測可能なサービスを保証させるために, 各エグゼキュータ (すなわち, 各スレッド) が単一の予約サーバに割り当てられ, 各予約サーバが単一のエグゼキュータを処理すると仮定する
+        \item したがって, エグゼキュータに割り当てられたコールバックは, 対応する予約サーバに割り当てられたと見なせる
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{予約}
     \begin{itemize}
-        \item システムは $w$ 予約 $\mathcal{R}=\left\{r_{1}, \ldots, r_{w}\right\}$ のセットで構成される
-\item 予約は $m$ プロセッサ $\mathcal{P}=\left\{p_{1}, \ldots, p_{m}\right\}$ のセットに分割される
-\item すなわち, 各予約は静的にプロセッサに割り当てられる
+        \item システムは $w$個の予約 $\mathcal{R}=\left\{r_{1}, \ldots, r_{w}\right\}$ のセットで構成される
+        \item 予約は $m$個のプロセッサ $\mathcal{P}=\left\{p_{1}, \ldots, p_{m}\right\}$ のセットに分割される
+        \item 各予約は静的にプロセッサに割り当てられる
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{供給境界関数}
     \begin{itemize}
-        \item 本論文で提示された結果は, 長さ $\Delta$ の任意の間隔で予約 $r_{k}$ によって提供される最小サービスを示す供給限界関数 $s b f_{k}(\Delta)$ の可用性に依存している (セクション 2.2 を思い出してください)
-\item 複数の予約が同じプロセッサに割り当てられるときはいつでも, 全ての予約がスケジュール可能である場合にのみ, 供給限界関数によって記述されるリソースのプロビジョニングが保証される
-\item 本論文では, 予約はスケジュール可能であると想定している
-\item 予約がタイミング制約を満たすことを保証する問題は, 以前の研究ではグローバルスケジューラビリティとも呼ばれる (例えば, 階層型スケジューリング [9] のコンテキストで)
-\item [37] など, グローバルなスケジューラビリティを確保するために, 多くの結果が利用可能である
+        \item 本論文は, 長さ $\Delta$ の任意の間隔で予約 $r_{k}$ によって提供される最小サービスを示す供給境界関数 $s b f_{k}(\Delta)$ の可用性に依存する
+        \item 複数の予約が同じプロセッサに割り当てられる場合は, 全ての予約がスケジュール可能である場合にのみ, 供給境界関数によって記述されるリソースの割り当てが保証される
     \end{itemize}
+    \assume{予約はスケジュール可能であると想定する}
 \end{frame}
 
-\begin{frame}{伝搬レイテンシ}
-    \begin{itemize}
-        \item 送信コールバックによるメッセージのパブリッシュと, 関連付けられた受信コールバックのアクティベーションの間の伝播レイテンシは, 重大な場合がある
-\item 実際, ROS システムは本質的に分散トポロジであるため, メッセージ交換にネットワークが関与し, 追加のレイテンシが発生する可能性がある
-\item このようなレイテンシをモデル化するために, 予約 $\left(r_{x}, r_{y}\right)$ の各ペアは, (DDS に依存する) 最悪通信レイテンシ $\delta_{i, j}$ によって特徴付けられる
-\item $r_{y}$ に割り当てられた受信コールバック $c_{j}$ の DDS 層によって受信された, すなわち, $c_{j}$ がアクティブになる前に経験した最大の追加レイテンシ
-\item $r_{x}=r_{y}, \delta_{i, j}$ が無視できると想定される場合
-\item このレイテンシは, ターゲットアプリケーションドメインの要件に応じて, さまざまな種類のネットワークに対して分析的に上界を設定するか (例えば,  $[17,19,51]$ を参照), 実用的に測定することができる
-    \end{itemize}
+\begin{frame}{最悪通信レイテンシ}
+    予約 $\left(r_{x}, r_{y}\right)$ の各ペアは, 最悪通信レイテンシ $\delta_{i, j}$ によって特徴付けられる
+    \begin{block}{最悪通信レイテンシ $\delta_{i, j}$}
+        $r_x$ に割り当てられた送信コールバック $c_i$ のDDS層から, $r_y$ に割り当てられた受信コールバック $c_j$ のDDS層によって受信されるまでに送信されるメッセージが経験する最大時間, すなわち, $c_j$ によって起動される前に経験する最大遅延
+    \end{block}
+    \assume{$r_{x}=r_{y}$ の時, $\delta_{i, j}$ は無視できると想定する}
 \end{frame}
 
 \begin{frame}{イベントソース}
     \begin{itemize}
-        \item タイマを除いて, ROS によって提供される全てのコールバックタイプは, データ駆動型アクティベーションセマンティクスを実装する
-\item したがって, ROS コールバックのみで構成される全てのチェーンは, 最初はタイマによってトリガされる
-\item それにもかかわらず, アプリケーションは多くの場合, 割り込みを介して非同期に配信される外部イベントに対応する必要がある (例えば, 特定のセンサ, 監視コントローラーまたは人間のオペレーターからの入力を配信するネットワークパケットなど)
-\item このようなイベントを ROS モデルに統合するために, 外部スレッドが ROS と対話し, 疑似コールバックとしてモデル化できるようにする
-\item 具体的には, これらのスレッドのイベントソースに名前を付ける
-\item イベントソースは, 散発的にアクティベーションされる通常の OS レベルのスレッドであり, 1 つまたは複数のトピックにpublishすることで ROS と対話し, 外部イベントのインターフェイスまたは入口ポイントとして機能する
-\item Executor の場合と同様に, 各イベントソースが専用の予約に排他的に割り当てられると想定している
-\item イベントソースをコールバック $c_{i} \in \mathcal{C}^{\text {evt }}$ と呼ぶ
+        \item イベントソースは, 散発的にアクティベーションされる OS レベルのスレッドであり, 1 つまたは複数のトピックにpublishすることで ROS と対話し, 外部イベントのインターフェイスまたは入口ポイントとして機能する
+        \item このようなイベントソースを疑似コールバック $c_{i} \in \mathcal{C}^{\text {evt}}$としてモデル化する
     \end{itemize}
+    \assume{各イベントソースは専用の予約に排他的に割り当てられると想定する}
 \end{frame}
