finish case study

--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/system_model.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/system_model.tex
@@ -98,7 +98,7 @@
 \begin{frame}{最悪通信レイテンシ}
     予約 $\left(r_{x}, r_{y}\right)$ の各ペアは, 最悪通信レイテンシ $\delta_{i, j}$ によって特徴付けられる
     \begin{block}{最悪通信レイテンシ $\delta_{i, j}$}
-        $r_x$ に割り当てられた送信コールバック $c_i$ のDDS層から, $r_y$ に割り当てられた受信コールバック $c_j$ のDDS層によって受信されるまでに送信されるメッセージが経験する最大時間, すなわち, $c_j$ によって起動される前に経験する最大遅延
+        $r_x$ に割り当てられた送信コールバック $c_i$ のDDS層から, $r_y$ に割り当てられた受信コールバック $c_j$ のDDS層によって受信されるまでに送信されるメッセージが経験する最大時間, すなわち, $c_j$ によって起動される前に経験する最大レイテンシ
     \end{block}
     \assume{$r_{x}=r_{y}$ の時, $\delta_{i, j}$ は無視できると想定する}
 \end{frame}
