--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/response_time_analysis_for_processing_chains.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/response_time_analysis_for_processing_chains.tex
@@ -11,21 +11,28 @@
 
 \begin{frame}{}
     \begin{itemize}
+        \item 本資料では, 分析方法のみを示す
+        \item 証明は論文を参照
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{}
+    \begin{itemize}
         \item CPA と同様に, 複雑な ROS グラフは, 各コールバックの個々の応答時間の上界を計算することによって分析される
-\item エンドツーエンドレイテンシは, 各チェーンのコールバックの個々の応答時間を合計することで取得できる [27]
-\item 残念ながら, CPA の既存のインスタンス化では, ROS スケジューリングメカニズム (ポーリングポイントなど) の特殊性を認識していないため, これらのコールバックごとの応答時間を計算することはできない
-\item したがって, セクション 5.2 でコールバックの ROS 固有の応答時間分析を提示する
+        \item エンドツーエンドレイテンシは, 各チェーンのコールバックの個々の応答時間を合計することで取得できる [27]
+        \item 残念ながら, CPA の既存のインスタンス化では, ROS スケジューリングメカニズム (ポーリングポイントなど) の特殊性を認識していないため, これらのコールバックごとの応答時間を計算することはできない
+        \item したがって, セクション 5.2 でコールバックの ROS 固有の応答時間分析を提示する
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
         \item このアプローチはエンドツーエンドレイテンシの安全で単純な上界を提供するが, 干渉するコールバックの到着バーストが複数回 (分析中のチェーン内のコールバックごとに 1 回) 考慮される場合, 結果の境界は過度に悲観的になる可能性がある
-\item この効果は, 文献では「pay-burst-only-one」問題 [30, 56] として知られている
-\item 分析の精度を向上させるために, セクション $5.4$ では, サブチェーンと呼ばれるチェーンの部分が全体論的な方法で分析される境界を提示する
-\item $\gamma^{x}$ の y 番目のサブチェーン $\gamma^{x, y}$ を, 単一の予約 $r_{k}$, すなわち $c_{i} \in \gamma^{x, y} \Rightarrow c_{i} \in \mathcal{C}_{k}$ に割り当てられた元のチェーンの連続するコールバック $c_{i} \in \gamma^{x}$ のシーケンスとして定義する
-\item このアプローチでは, 到着バーストはサブチェーンごとに 1 回だけ考慮される
-\item CPA アプローチは, サブチェーンが予約境界を越えるか, 複数の先行者を持つコールバックで別のチェーンと結合するたびに, 到着曲線を伝播し, 応答時間の範囲を合計することにより, サブチェーンごとに適用できる
+        \item この効果は, 文献では「pay-burst-only-one」問題 [30, 56] として知られている
+        \item 分析の精度を向上させるために, セクション $5.4$ では, サブチェーンと呼ばれるチェーンの部分が全体論的な方法で分析される境界を提示する
+        \item $\gamma^{x}$ の y 番目のサブチェーン $\gamma^{x, y}$ を, 単一の予約 $r_{k}$, すなわち $c_{i} \in \gamma^{x, y} \Rightarrow c_{i} \in \mathcal{C}_{k}$ に割り当てられた元のチェーンの連続するコールバック $c_{i} \in \gamma^{x}$ のシーケンスとして定義する
+        \item このアプローチでは, 到着バーストはサブチェーンごとに 1 回だけ考慮される
+        \item CPA アプローチは, サブチェーンが予約境界を越えるか, 複数の先行者を持つコールバックで別のチェーンと結合するたびに, 到着曲線を伝播し, 応答時間の範囲を合計することにより, サブチェーンごとに適用できる
     \end{itemize}
 \end{frame}
 
@@ -36,25 +43,25 @@
 \begin{frame}{}
     \begin{itemize}
         \item 図 5 は, 提案された分析を使用して, 複数の予約にまたがるコールバックチェーンの応答時間の上界を設定する方法を示す例を示している
-\item わかりやすくするために, 干渉するコールバックは図では省略されている
-\item $\gamma^{x}$ のさまざまなサブチェーン (すなわち, $\gamma^{x, 1}=\left(c_{1}, c_{2}\right), \gamma^{x, 2}=\left(c_{3}, c_{4}\right), \gamma^{x, 4}=\left(c_{6}, c_{7}\right)$, および $\left.\gamma^{x, 3}=\left(c_{5}\right)\right)$) の応答時間の境界は, セクション 5.2 および 5.4 で提示される結果から導き出すことができる
+        \item わかりやすくするために, 干渉するコールバックは図では省略されている
+        \item $\gamma^{x}$ のさまざまなサブチェーン (すなわち, $\gamma^{x, 1}=\left(c_{1}, c_{2}\right), \gamma^{x, 2}=\left(c_{3}, c_{4}\right), \gamma^{x, 4}=\left(c_{6}, c_{7}\right)$, および $\left.\gamma^{x, 3}=\left(c_{5}\right)\right)$) の応答時間の境界は, セクション 5.2 および 5.4 で提示される結果から導き出すことができる
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
         \item セクション 2.3 で説明したように, 非ソースサブチェーンのアクティベーションカーブは, 前のサブチェーンの応答時間と通信レイテンシの両方に依存する必要がある
-\item この例では, $\eta_{x, 2}^{a}(\Delta)=\eta_{x}^{e}\left(\Delta+R_{x, 1}+\delta_{2,3}\right), \eta_{x, 3}^{a}(\Delta)=\eta_{x, 2}^{a}(\Delta+$  $\left.R_{x, 2}+\delta_{4,5}\right), \eta_{x, 4}^{a}(\Delta)=\eta_{x, 3}^{e}\left(\Delta+R_{x, 3}+\delta_{5,6}\right)$ である
-\item ここで, $R_{x, y}$ は $\gamma^{x, y}$ の応答時間の上界である
-\item この例に示されているチェーンの応答時間は, サブチェーンの応答時間と通信レイテンシの合計, すなわち $R_{x}=R_{x, 1}+\delta_{2,3}+R_{x, 2}+\delta_{4,5}+R_{x, 3}+\delta_{5,6}+R_{x, 4}$ として計算できる
+        \item この例では, $\eta_{x, 2}^{a}(\Delta)=\eta_{x}^{e}\left(\Delta+R_{x, 1}+\delta_{2,3}\right), \eta_{x, 3}^{a}(\Delta)=\eta_{x, 2}^{a}(\Delta+$  $\left.R_{x, 2}+\delta_{4,5}\right), \eta_{x, 4}^{a}(\Delta)=\eta_{x, 3}^{e}\left(\Delta+R_{x, 3}+\delta_{5,6}\right)$ である
+        \item ここで, $R_{x, y}$ は $\gamma^{x, y}$ の応答時間の上界である
+        \item この例に示されているチェーンの応答時間は, サブチェーンの応答時間と通信レイテンシの合計, すなわち $R_{x}=R_{x, 1}+\delta_{2,3}+R_{x, 2}+\delta_{4,5}+R_{x, 3}+\delta_{5,6}+R_{x, 4}$ として計算できる
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
         \item 1 つ以上のコールバックを共有する処理チェーンも, 分析フレームワークによってサポートされている
-\item このケースに対処するために, ジッター伝播アプローチは, 複数の着信エッジ, すなわち複数の先行エッジを持つコールバックに拡張される [29]
-\item セクション 4 で説明したように, 複数の着信エッジを持つコールバックは, その先行者のいずれかからメッセージを受信するとトリガされる
+        \item このケースに対処するために, ジッター伝播アプローチは, 複数の着信エッジ, すなわち複数の先行エッジを持つコールバックに拡張される [29]
+        \item セクション 4 で説明したように, 複数の着信エッジを持つコールバックは, その先行者のいずれかからメッセージを受信するとトリガされる
     \end{itemize}
 \end{frame}
 
@@ -67,7 +74,7 @@
               \end{equation*}
 
         \item ここで, $R_{j}$ は $c_{j}$ の応答時間であり, $\delta_{j, i}$ は $c_{j}$ から $c_{i}$ へのメッセージの伝搬レイテンシである
-\item 各publish メッセージがコールバックインスタンスを生成するため, 式 (1) の合計が得られる
+        \item 各publish メッセージがコールバックインスタンスを生成するため, 式 (1) の合計が得られる
     \end{itemize}
 \end{frame}
 
@@ -84,19 +91,19 @@
 \begin{frame}{}
     \begin{itemize}
         \item $t$ の前に到着した $c_{i}$ の保留中のインスタンスがない場合, 時間 $t$ は, コールバック $c_{i}$ に関して静かな時間である
-\item $t_{1}$ と $t_{2}$ が $c_{i}$ の休止時間であり, $t_{1}$ と $t_{2}$ の間に休止時間 ($c_{i}$ に関して) がない場合, 間隔 $\left[t_{1}, t_{2}\right)$ は $c_{i}$ のビジー期間 [59] である
-\item コールバック $c_{i}$ の応答時間 $R_{i}$ は, 特定のインスタンスの終了時間とリリース時刻の間の任意のインスタンスにわたる最大差として定義される
-\item 各コールバック $c_{i}$ に対して, リクエストバインド関数 $r b f_{i}(\Delta)$ は, 長さ $\Delta$, すなわち $r b f_{i}(\Delta)=\eta_{i}^{a}(\Delta) \cdot e_{i}[31]$ の間隔でリリースされたコールバックインスタンスによって必要とされる (累積) プロセッササービスの最大量として定義される
-\item 最後に, 特定の一連のコールバック $\mathcal{C}^{*}$ のリクエストバインド関数の合計を $R B F\left(\mathcal{C}^{*}, \Delta\right)=\sum_{c_{i} \in \mathcal{C}^{*}} r b f_{i}(\Delta)$ として定義する
+        \item $t_{1}$ と $t_{2}$ が $c_{i}$ の休止時間であり, $t_{1}$ と $t_{2}$ の間に休止時間 ($c_{i}$ に関して) がない場合, 間隔 $\left[t_{1}, t_{2}\right)$ は $c_{i}$ のビジー期間 [59] である
+        \item コールバック $c_{i}$ の応答時間 $R_{i}$ は, 特定のインスタンスの終了時間とリリース時刻の間の任意のインスタンスにわたる最大差として定義される
+        \item 各コールバック $c_{i}$ に対して, リクエストバインド関数 $r b f_{i}(\Delta)$ は, 長さ $\Delta$, すなわち $r b f_{i}(\Delta)=\eta_{i}^{a}(\Delta) \cdot e_{i}[31]$ の間隔でリリースされたコールバックインスタンスによって必要とされる (累積) プロセッササービスの最大量として定義される
+        \item 最後に, 特定の一連のコールバック $\mathcal{C}^{*}$ のリクエストバインド関数の合計を $R B F\left(\mathcal{C}^{*}, \Delta\right)=\sum_{c_{i} \in \mathcal{C}^{*}} r b f_{i}(\Delta)$ として定義する
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
         \item スケジューリングの観点から, コールバックは, イベントソース, タイマ, およびポーリングポイントベース (pp ベース) のコールバックの 3 つのカテゴリに分けることができる
-\item 便宜上, $r_{k}$ に割り当てられたイベントソースとタイマをそれぞれ含むセット $\mathcal{C}_{k}^{\text {evt }}$ と $\mathcal{C}_{k}^{\mathrm{tmr}}$ に加えて, $r_{k}$ に割り当てられた pp ベースのコールバックのセット $\mathcal{C}_{k}^{\mathrm{pp}}=\mathcal{C}_{k} \backslash\left(\mathcal{C}_{k}^{\text {evt }} \cup \mathcal{C}_{k}^{\mathrm{tmr}}\right)$ も定義する
-\item セクション 4 で説明したように, 各イベントソースは専用の予約に排他的に割り当てられるため, イベントソースは分析が最も簡単である
-\item 供給境界関数 $s b f_{k}(\Delta)$, すなわち, 長さ $\Delta$ の間隔で予約 $r_{k}$ によって提供されるサービスの最小量の概念に基づいて, Lemma 1 はイベントソースの応答時間限界を提供する
+        \item 便宜上, $r_{k}$ に割り当てられたイベントソースとタイマをそれぞれ含むセット $\mathcal{C}_{k}^{\text {evt }}$ と $\mathcal{C}_{k}^{\mathrm{tmr}}$ に加えて, $r_{k}$ に割り当てられた pp ベースのコールバックのセット $\mathcal{C}_{k}^{\mathrm{pp}}=\mathcal{C}_{k} \backslash\left(\mathcal{C}_{k}^{\text {evt }} \cup \mathcal{C}_{k}^{\mathrm{tmr}}\right)$ も定義する
+        \item セクション 4 で説明したように, 各イベントソースは専用の予約に排他的に割り当てられるため, イベントソースは分析が最も簡単である
+        \item 供給境界関数 $s b f_{k}(\Delta)$, すなわち, 長さ $\Delta$ の間隔で予約 $r_{k}$ によって提供されるサービスの最小量の概念に基づいて, Lemma 1 はイベントソースの応答時間限界を提供する
     \end{itemize}
 \end{frame}
 
@@ -116,17 +123,17 @@
 \begin{frame}{}
     \begin{itemize}
         \item Lemma 1 は, 可能性のあるリリースオフセット $A$ の無制限の数をチェックする必要があるため, 直接適用できない
-\item 応答時間分析を実際に実装するには, 分析間隔の長さの上界と, チェックする必要があるリリースオフセット数の削減の両方が必要である
-\item この問題については, セクション 5.3 で再検討する
+        \item 応答時間分析を実際に実装するには, 分析間隔の長さの上界と, チェックする必要があるリリースオフセット数の削減の両方が必要である
+        \item この問題については, セクション 5.3 で再検討する
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
         \item 次に, 適切なコールバックであり, したがって ROS エグゼキュータによってディスパッチされるタイマの応答時間を検討する
-\item セクション 3 で説明したように, タイマスケジューリングはポーリングポイントの影響を受けない
-\item それにもかかわらず, エグゼキュータはコールバックをプリエンプティブに処理しないため, タイマは優先度の低いブロックの対象になる
-\item Lemma 2 は, 優先度の低いコールバック $c_{j} \in l p_{k}\left(c_{i}\right)$ が原因でタイマコールバックが経験するブロッキングを制限する
+        \item セクション 3 で説明したように, タイマスケジューリングはポーリングポイントの影響を受けない
+        \item それにもかかわらず, エグゼキュータはコールバックをプリエンプティブに処理しないため, タイマは優先度の低いブロックの対象になる
+        \item Lemma 2 は, 優先度の低いコールバック $c_{j} \in l p_{k}\left(c_{i}\right)$ が原因でタイマコールバックが経験するブロッキングを制限する
     \end{itemize}
 \end{frame}
 
@@ -152,11 +159,11 @@
 \begin{frame}{}
     \begin{itemize}
         \item 繰り返すが, セクション 5.3 では, 実際の応答時間分析でLemma 3 を使用する方法について説明する
-\item 次に, pp ベースのコールバックを検討する
-\item 動的ポーリングポイントの予測不可能な性質により, pp ベースのコールバックはさらにブロックされる
-\item 実際, pp ベースのコールバックのインスタンスがリリースされると, 実行される前に 1 つ以上の処理ウィンドウが完了する必要がある
-\item pp ベースのコールバックの応答時間の限界は, Lemma 4 によって提供される
-\item これを図 6 に示す
+        \item 次に, pp ベースのコールバックを検討する
+        \item 動的ポーリングポイントの予測不可能な性質により, pp ベースのコールバックはさらにブロックされる
+        \item 実際, pp ベースのコールバックのインスタンスがリリースされると, 実行される前に 1 つ以上の処理ウィンドウが完了する必要がある
+        \item pp ベースのコールバックの応答時間の限界は, Lemma 4 によって提供される
+        \item これを図 6 に示す
     \end{itemize}
 \end{frame}
 
@@ -164,7 +171,7 @@
     \begin{lemma}[]
         \begin{itemize}
             \item $A \geq 0$ が, 分析中の pp ベースのコールバック $c_{i} \in \mathcal{C}_{k}^{\mathrm{pp}}$ のインスタンスがリリースされた時刻 (現在のビジー期間の開始を基準として) である場合, $X \geq 0$ は, 時刻 $A+R_{i}^{*}(A)-e_{i}$ と時刻 $A+R_{i}^{*}(A)-e_{i}$ より前の最後のポーリングポイントとの差である
-\item (図 6 を参照), $R_{i}^{*}(A)$ は条件を満たす最小の正の値である
+            \item (図 6 を参照), $R_{i}^{*}(A)$ は条件を満たす最小の正の値である
                   \begin{equation*}
                       \begin{aligned}
                           s b f_{k}\left(A+R_{i}^{*}(A)\right)=r b f_{i}(A+1) & +R B F\left(\mathcal{C}_{k}^{\text {oth }}, A+R_{i}^{*}(A)-e_{i}-X+1\right) \\
@@ -179,13 +186,13 @@
 \begin{frame}{}
     \begin{itemize}
         \item Lemma 4 は, pp ベースのコールバックが経験する応答時間の上界である
-\item 前のLemmaに関しては, セクション 5.3 で可能な時間 $A$ の空間を制限する方法について説明する
-\item さらに, Lemma 4 は, $A+R_{i}^{*}(A)-e_{i}$ と $A+R_{i}^{*}(A)$ の前の最後のポーリングポイントとの間の時間距離 $X$ に依存するが, これはオフライン分析では一般に不明である
-\item したがって, 応答時間を最大化するシナリオ (すなわち,  $X$ の値) を決定する必要がある
-\item 直観的に, このケースは, 分析中のコールバック $c_{i}$ が最後のポーリングポイントの直後に実行を開始した場合に発生する
-\item すなわち, 優先度の低いコールバックは, リリースから実行開始までの間, $c_{i}$ に干渉する可能性がある
-\item この場合, $X=0$
-\item Lemma 5 は, $X=0$ が実際に $X$ の任意の値を支配することを証明する
+        \item 前のLemmaに関しては, セクション 5.3 で可能な時間 $A$ の空間を制限する方法について説明する
+        \item さらに, Lemma 4 は, $A+R_{i}^{*}(A)-e_{i}$ と $A+R_{i}^{*}(A)$ の前の最後のポーリングポイントとの間の時間距離 $X$ に依存するが, これはオフライン分析では一般に不明である
+        \item したがって, 応答時間を最大化するシナリオ (すなわち,  $X$ の値) を決定する必要がある
+        \item 直観的に, このケースは, 分析中のコールバック $c_{i}$ が最後のポーリングポイントの直後に実行を開始した場合に発生する
+        \item すなわち, 優先度の低いコールバックは, リリースから実行開始までの間, $c_{i}$ に干渉する可能性がある
+        \item この場合, $X=0$
+        \item Lemma 5 は, $X=0$ が実際に $X$ の任意の値を支配することを証明する
     \end{itemize}
 \end{frame}
 
@@ -205,7 +212,7 @@
 \begin{frame}{}
     \begin{itemize}
         \item Lemma 5 により, タイマコールバック $c_{t} \in \mathcal{C}_{k}^{\text {tmr }}$ と非タイマコールバック $c_{n} \in \mathcal{C}_{k}^{\text {oth }}$ によって生成される干渉の量は, 最悪の場合でも同じであることが分かる
-\item したがって, 2 つのセットをマージして, 式 (4) をより簡単な方法で書き直すことができる
+        \item したがって, 2 つのセットをマージして, 式 (4) をより簡単な方法で書き直すことができる
               \begin{equation*}
                   s b f_{k}\left(A+R_{i}^{*}(A)\right)=\operatorname{rbf}_{i}(A+1)+R B F\left(\left\{\mathcal{C}_{k} \backslash c_{i}\right\}, A+R_{i}^{*}(A)-e_{i}+1\right)
               \end{equation*}
@@ -215,9 +222,9 @@
 \begin{frame}{}
     \begin{itemize}
         \item 式 (6) は, 組み込みの ROS エグゼキュータによって採用されたスケジューリングポリシーにより, 優先度に関係なく, 他の全てのコールバックが pp ベースのコールバックに干渉できることを強調している
-\item その結果, ポーリングポイントは, pp ベースのコールバックの応答時間の上界を設定するための優先度の割り当てを無効にする
-\item これは, 分析の観点から, モデルの検証 (セクション 3) で経験的に観察したことを裏付けている
-\item リソース予約 (Lemma 3) のコンテキストでは, タイマコールバックはポーリングポイントの影響を受けず, それらの応答時間の境界は, プリエンプティブでない固定優先度スケジューリング [17] と同等であることに注意
+        \item その結果, ポーリングポイントは, pp ベースのコールバックの応答時間の上界を設定するための優先度の割り当てを無効にする
+        \item これは, 分析の観点から, モデルの検証 (セクション 3) で経験的に観察したことを裏付けている
+        \item リソース予約 (Lemma 3) のコンテキストでは, タイマコールバックはポーリングポイントの影響を受けず, それらの応答時間の境界は, プリエンプティブでない固定優先度スケジューリング [17] と同等であることに注意
     \end{itemize}
 \end{frame}
 
@@ -228,10 +235,10 @@
 \begin{frame}{}
     \begin{itemize}
         \item セクション $5.2$ に示されているLemmaでは, 可能な全ての $A \geq 0$ について式 (3), (4), および (5) をチェックする必要がある
-\item ここで, $A$ は, 分析中のコールバックインスタンスの (現在のビジー期間の開始に対する) 相対リリース時刻を表す
-\item
-\item 実際の応答時間分析で前述のLemmaを使用するには, 分析間隔の制限と探索空間サイズの削減の両方が必要である
-\item 分析間隔は, 予約 $r_{k}$ がより高い優先度または同等の優先度のワークロードを提供するためにビジーである最長の間隔, すなわち, Lemma 6 が制限する最長のビジー期間 [59] の長さによって制限されることに注意
+        \item ここで, $A$ は, 分析中のコールバックインスタンスの (現在のビジー期間の開始に対する) 相対リリース時刻を表す
+        \item
+        \item 実際の応答時間分析で前述のLemmaを使用するには, 分析間隔の制限と探索空間サイズの削減の両方が必要である
+        \item 分析間隔は, 予約 $r_{k}$ がより高い優先度または同等の優先度のワークロードを提供するためにビジーである最長の間隔, すなわち, Lemma 6 が制限する最長のビジー期間 [59] の長さによって制限されることに注意
     \end{itemize}
 \end{frame}
 
@@ -239,7 +246,7 @@
     \begin{lemma}[]
         \begin{itemize}
             \item $\mathcal{C}_{k}^{\mathrm{evt}}, \mathcal{C}_{k}^{\mathrm{tmr}}$ と $\mathcal{C}_{k}^{\mathrm{pp}}$ を, それぞれ $r_{k}$ に割り当てられた全てのイベントソース, タイマ, および pp ベースのコールバックのセットとする
-\item $c_{i} \in \mathcal{C}_{k}$ が分析中のコールバックであり, $L^{*}$ が条件を満たす最小の正の値である場合
+            \item $c_{i} \in \mathcal{C}_{k}$ が分析中のコールバックであり, $L^{*}$ が条件を満たす最小の正の値である場合
                   \begin{equation*}
                       s b f_{k}\left(L^{*}\right)= \begin{cases}r b f_{i}\left(L^{*}\right) & \text { if } c_{i} \in \mathcal{C}_{k}^{\mathrm{evt}} \\ R B F\left(h p_{k}\left(c_{i}\right), L^{*}\right)+B_{i}+r b f_{i}\left(L^{*}\right) & \text { if } c_{i} \in \mathcal{C}_{k}^{\mathrm{tmr}} \\ R B F\left(\mathcal{C}_{k}, L^{*}\right) & \text { if } c_{i} \in \mathcal{C}_{k}^{\mathrm{pp}}\end{cases}
                   \end{equation*}
@@ -252,11 +259,11 @@
 \begin{frame}{}
     \begin{itemize}
         \item Lemma 6 は探索を有限区間に制限するため, 以下のLemma 7 は探索空間に含まれる点の数を減らす
-\item この目的のために, 式 (3), (4), および (6) を使用して計算された応答時間の境界を検討してください
-\item それぞれは, 一般的な応答時間方程式 $s b f_{k}(A+x)=r b f_{i}(A+1)+I(A+x)+B$ のインスタンスとして表すことができる
-\item ここで, $B$ は定数であり, 関数 $I$ その引数のみに依存する
-\item 例えば, 式 (6) は, $B=0$ と $I(\Delta)=R B F\left(\left\{\mathcal{C}_{k} \backslash c_{i}\right\}, \Delta-e_{i}+1\right)$ を代入することにより, この形式で記述できる
-\item 任意の $A$ について, 一般的な応答時間の式を満たす全ての正の $x$ のセットを $S O L(A)$ とする
+        \item この目的のために, 式 (3), (4), および (6) を使用して計算された応答時間の境界を検討してください
+        \item それぞれは, 一般的な応答時間方程式 $s b f_{k}(A+x)=r b f_{i}(A+1)+I(A+x)+B$ のインスタンスとして表すことができる
+        \item ここで, $B$ は定数であり, 関数 $I$ その引数のみに依存する
+        \item 例えば, 式 (6) は, $B=0$ と $I(\Delta)=R B F\left(\left\{\mathcal{C}_{k} \backslash c_{i}\right\}, \Delta-e_{i}+1\right)$ を代入することにより, この形式で記述できる
+        \item 任意の $A$ について, 一般的な応答時間の式を満たす全ての正の $x$ のセットを $S O L(A)$ とする
     \end{itemize}
 \end{frame}
 
@@ -264,7 +271,7 @@
     \begin{lemma}[]
         \begin{itemize}
             \item 分析中のコールバック $c_{i} \in \mathcal{C}_{k}$ について, $\mathcal{A}_{i}^{-}=\left\{A>0 \mid r b f_{i}(A+1)=r b f_{i}(A)\right\}$ が $\operatorname{rbf}_{i}(A)$ が一定のままである点を示すとする
-\item $a \in \mathcal{A}_{i}^{-}, R_{i}^{*}(a) \neq \max _{A \geq 0} R_{i}^{*}(A)$ の場合
+            \item $a \in \mathcal{A}_{i}^{-}, R_{i}^{*}(a) \neq \max _{A \geq 0} R_{i}^{*}(A)$ の場合
         \end{itemize}
     \end{lemma}
 \end{frame}
@@ -294,10 +301,10 @@
 \begin{frame}{}
     \begin{itemize}
         \item 各サブチェーンは予約境界を越えません
-\item この目的のために, リクエストバインド関数の概念を $r b f^{x, y}(\Delta)=\eta_{s}^{a}(\Delta) \cdot e^{x, y}$ としてサブチェーンに拡張する
-\item ここで, $c_{s}$ はサブチェーン $\gamma^{x, y}$ の最初のコールバックであり, $e^{x, y}=\sum_{c_{i} \in \gamma^{x, y}} e_{i}$ はサブチェーンの最悪累積実行時間である
-\item したがって, $\Gamma_{k}$ は $r_{k}$ に割り当てられたサブチェーンのセットである
-\item Lemma 8 により, 複数のコールバックで構成されるサブチェーンの応答時間の範囲を計算できる (サブチェーンが単一のコールバックのみで構成されている場合, その応答時間はセクション 5.2 の結果で計算できる)
+        \item この目的のために, リクエストバインド関数の概念を $r b f^{x, y}(\Delta)=\eta_{s}^{a}(\Delta) \cdot e^{x, y}$ としてサブチェーンに拡張する
+        \item ここで, $c_{s}$ はサブチェーン $\gamma^{x, y}$ の最初のコールバックであり, $e^{x, y}=\sum_{c_{i} \in \gamma^{x, y}} e_{i}$ はサブチェーンの最悪累積実行時間である
+        \item したがって, $\Gamma_{k}$ は $r_{k}$ に割り当てられたサブチェーンのセットである
+        \item Lemma 8 により, 複数のコールバックで構成されるサブチェーンの応答時間の範囲を計算できる (サブチェーンが単一のコールバックのみで構成されている場合, その応答時間はセクション 5.2 の結果で計算できる)
     \end{itemize}
 \end{frame}
 
@@ -317,8 +324,8 @@
 \begin{frame}{}
     \begin{itemize}
         \item Lemma 8 はLemma 4 をサブチェーン用に拡張したものである
-\item セクション 5.2 で観察されたように, この場合も pp ベースのコールバックの存在により, より厳しい応答時間の境界を計算する目的で優先度の割り当てが無効になる
-\item しかし, 干渉するコールバックの到着バーストはサブチェーンごとに 1 回しか考慮されないため, サブチェーンを全体的に分析すると, 長いサブチェーンの分析精度が全体的に向上する
+        \item セクション 5.2 で観察されたように, この場合も pp ベースのコールバックの存在により, より厳しい応答時間の境界を計算する目的で優先度の割り当てが無効になる
+        \item しかし, 干渉するコールバックの到着バーストはサブチェーンごとに 1 回しか考慮されないため, サブチェーンを全体的に分析すると, 長いサブチェーンの分析精度が全体的に向上する
     \end{itemize}
 \end{frame}
 
@@ -329,10 +336,10 @@
 \begin{frame}{}
     \begin{itemize}
         \item このセクションで示す結果により, 予約ベースのスケジューリングで ROS システムを分析できる
-\item 具体的には, セクション $5.2$ は単一のコールバックの応答時間分析を提案し, セクション $5.4$ はそれを単一の予約に割り当てられたサブチェーンに拡張した
-\item セクション 5.1 で説明したように, どちらのアプローチでも, 到着曲線を伝搬し, 個々の応答時間の境界を合計することにより, 一般的な処理チェーンの安全なエンドツーエンドレイテンシを計算できる
-\item 具体的には, 先行コールバックの影響は, 非ソースコールバックのアクティベーションカーブのリリースジッターとして考慮される
-\item このようなリリースのジッターは, 前任ノードの応答時間に依存するが, 応答時間も循環的にジッターに依存する
-\item CPA アプローチと同様に, この問題は, 全てのジッター条件と応答時間が一貫しているグローバルな固定点を繰り返し探索することで解決できる
+        \item 具体的には, セクション $5.2$ は単一のコールバックの応答時間分析を提案し, セクション $5.4$ はそれを単一の予約に割り当てられたサブチェーンに拡張した
+        \item セクション 5.1 で説明したように, どちらのアプローチでも, 到着曲線を伝搬し, 個々の応答時間の境界を合計することにより, 一般的な処理チェーンの安全なエンドツーエンドレイテンシを計算できる
+        \item 具体的には, 先行コールバックの影響は, 非ソースコールバックのアクティベーションカーブのリリースジッターとして考慮される
+        \item このようなリリースのジッターは, 前任ノードの応答時間に依存するが, 応答時間も循環的にジッターに依存する
+        \item CPA アプローチと同様に, この問題は, 全てのジッター条件と応答時間が一貫しているグローバルな固定点を繰り返し探索することで解決できる
     \end{itemize}
 \end{frame}
