finish related work

--- a/bibtex/master_reference.bib
+++ b/bibtex/master_reference.bib
@@ -89,6 +89,15 @@
   organization={IEEE}
 }
 
+@inproceedings{fohler1997static,
+  title={Static scheduling of pipelined periodic tasks in distributed real-time systems},
+  author={Fohler, Gerhard and Ramamritham, Krithi},
+  booktitle={Proceedings Ninth Euromicro Workshop on Real Time Systems},
+  pages={128--135},
+  year={1997},
+  organization={IEEE}
+}
+
 @article{gutierrez2018towards,
   title={Towards a distributed and real-time framework for robots: Evaluation of {ROS} 2.0 communications for real-time robotic applications},
   author={Guti{\'e}rrez, Carlos San Vicente and Juan, Lander Usategui San and Ugarte, Irati Zamalloa and Vilches, V{\'\i}ctor Mayoral},
@@ -200,6 +209,66 @@
   pages={251--263},
   year={2021},
   organization={IEEE}
+}
+
+@article{rahni2012feasibility,
+  title={Feasibility analysis of real-time transactions},
+  author={Rahni, Ahmed and Grolleau, Emmanuel and Richard, Micha{\"e}l and Richard, Pascal},
+  journal={Real-Time Systems},
+  volume={48},
+  number={3},
+  pages={320--358},
+  year={2012},
+  publisher={Springer}
+}
+
+@inproceedings{thiele2000real,
+  title={Real-time calculus for scheduling hard real-time systems},
+  author={Thiele, Lothar and Chakraborty, Samarjit and Naedele, Martin},
+  booktitle={2000 IEEE International Symposium on Circuits and Systems (ISCAS)},
+  volume={4},
+  pages={101--104},
+  year={2000},
+  organization={IEEE}
+}
+
+@article{schlatow2017response,
+  title={Response-time analysis for task chains with complex precedence and blocking relations},
+  author={Schlatow, Johannes and Ernst, Rolf},
+  journal={ACM Transactions on Embedded Computing Systems (TECS)},
+  volume={16},
+  number={5s},
+  pages={1--19},
+  year={2017},
+  publisher={ACM New York, NY, USA}
+}
+
+@inproceedings{richter2002model,
+  title={Model composition for scheduling analysis in platform design},
+  author={Richter, Kai and Ziegenbein, Dirk and Jersak, Marek and Ernst, Rolf},
+  booktitle={Proceedings of the 39th Annual Design Automation Conference},
+  pages={287--292},
+  year={2002}
+}
+
+@inproceedings{richter2002event,
+  title={Event model interfaces for heterogeneous system analysis},
+  author={Richter, Kai and Ernst, Rolf},
+  booktitle={Proceedings 2002 Design, Automation and Test in Europe Conference and Exhibition},
+  pages={506--513},
+  year={2002},
+  organization={IEEE}
+}
+
+@article{tindell1994holistic,
+  title={Holistic schedulability analysis for distributed hard real-time systems},
+  author={Tindell, Ken and Clark, John},
+  journal={Microprocessing and microprogramming},
+  volume={40},
+  number={2-3},
+  pages={117--134},
+  year={1994},
+  publisher={Elsevier}
 }
 
 @inproceedings{blass2021automatic,
